link to stylesheet

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <title>Sheena Ramirez | Web Developer</title>
 </head>
 <body>
