change social profiles

--- a/aboutme.html
+++ b/aboutme.html
@@ -6,9 +6,6 @@
   <title>Sheena Ramirez | Web Developer</title>
 </head>
 <body>
-  
-</body>
-</html>
 <header class="masthead">
     <h1 class="masthead-heading">Sheena Ramirez</h1>
     <p class="masthead-intro">Web Developer</p>
@@ -29,12 +26,13 @@
   <p><a href="https://soundcloud.com/blu-official/tracks" target="_blank">Blu</a> and <a href="https://en.wikipedia.org/wiki/Little_Brother_(group)" target="_blank">Little Brother</a> are two of my favorite hip-hop artists/groups, and so I have them on heavy rotation. The same goes for <a href="http://www.hectorlavoe.com/" target="_blank">Hector Lavoe</a>, who is my favorite salsa artist of all time.</p>
 </section>
 <footer class="content-footer">
-  <p>Say "hi" to me on these social networks:</-p>
+  <p>Say "hi" to me on these social networks:</p>
   <ul class="social">
-    <!-- Links are to the homepages until I set up profiles -->
-    <li><a href="https://github.com/" target="_blank">Github</a></li>
-    <li><a href="http://twitter.com/" target="_blank">Twitter</a></li>
-    <li><a href="https://plus.google.com" target="_blank">Google+</a></li>
+    <li><a href="https://github.com/commonstarling" target="_blank">Github</a></li>
+    <li><a href="https://plus.google.com/u/1/112466428083972984003/posts" target="_blank">Google+</a></li>
+    <li><a href="https://www.linkedin.com/in/sheenaramirez" target="_blank">LinkedIn</a></li>
   </ul>
   <p>Cover image via <a href="https://unsplash.com/">Unsplash</a></p>
 </footer>
+</body>
+</html>
