Add nav section

--- a/aboutme.html
+++ b/aboutme.html
@@ -10,6 +10,12 @@
     <h1 class="masthead-heading">Sheena Ramirez</h1>
     <p class="masthead-intro">Web Developer</p>
 </header>
+<nav>
+  <ul class="pages">
+    <li><h2>Portfolio</h2></li>
+    <li><h2>Blog</h2></li>
+  </ul>
+</nav>
 <section class="introduction-section">
   <h1>Introduction</h1>
   <p>I'm a journalist and editor turned front-end developer who is combining my love of good writing with my interest in good coding. Since I love the Internet and spend a significant portion of my days perusing it, I'm excited to contribute to how others see and use the Web.</p>
