add pages and links

--- a/aboutme.html
+++ b/aboutme.html
@@ -12,8 +12,8 @@
 </header>
 <nav>
   <ul class="pages">
-    <li><h2>Portfolio</h2></li>
-    <li><h2>Blog</h2></li>
+    <li><h2><a href="pages/portfolio.html">Portfolio</a></h2></li>
+    <li><h2><a href="pages/blog.html">Blog</a></h2></li>
   </ul>
 </nav>
 <section class="introduction-section">
