Add portfolio images

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -16,7 +16,24 @@
     <li><h2><a href="blog.html">Blog</a></h2></li>
   </ul>
 </nav>
-
+<section class="portfolio">
+	<h1>Projects</h1>
+	<br>
+	<br>
+	<h3>"Hack" the New York Times</h3>
+	<p>Using Chrome DevTools, I created a personalized edition of the New York Times homepage.</p>
+	<br>
+	<img class="portfolio-pics" src="../images/NYT-hack.jpg">
+	<br>
+	<br>
+	<h3>Karma Homepage Clone</h3>
+	<p>This is a replica of the <a href="http://thinkful-ed.github.io/karma-clone/" target="_blank">previous homepage for Karma</a>, a provider of portable WiFi.</p>
+	<br>
+	<img class="portfolio-pics" src="../images/Karma-clone.jpg">
+	<br>
+	<img class="portfolio-pics" src="../images/karma-clone2.jpg">
+	<br>
+</section>
 
 <footer class="content-footer">
   <p>Say "hi" to me on these social networks:</p>
