--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans|Gentium+Book+Basic' rel='stylesheet' type='text/css'>
   <title>Sheena Ramirez | Web Developer</title>
 </head>
 <body>
