--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans|Gentium+Book+Basic' rel='stylesheet' type='text/css'>
+  <link href="../css/font-awesome.min.css" rel="stylesheet">
   <title>Sheena Ramirez | Web Developer</title>
 </head>
 <body>
