--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans|Gentium+Book+Basic' rel='stylesheet' type='text/css'>
-  <link href="css/font-awesome.min.css" rel="stylesheet">
+  <link href="css/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
   <title>Sheena Ramirez | Web Developer</title>
 </head>
 <body>
@@ -36,9 +36,9 @@
 <footer class="content-footer">
   <p>Say "hi" to me on these social networks:</p>
   <ul class="social">
-    <li><a href="https://github.com/commonstarling" target="_blank">Github</a></li>
-    <li><a href="https://plus.google.com/u/1/112466428083972984003/posts" target="_blank">Google+</a></li>
-    <li><a href="https://www.linkedin.com/in/sheenaramirez" target="_blank">LinkedIn</a></li>
+    <li><a href="https://github.com/commonstarling" target="_blank"><i class="fa fa-github-square"></i>Github</a></li>
+    <li><a href="https://plus.google.com/u/1/112466428083972984003/posts" target="_blank"><i class="fa fa-google-plus-square"></i>Google+</a></li>
+    <li><a href="https://www.linkedin.com/in/sheenaramirez" target="_blank"><i class="fa fa-linkedin-square"></i>LinkedIn</a></li>
   </ul>
   <p>Cover image via <a href="https://unsplash.com/">Unsplash</a></p>
 </footer>
