--- a/pages/blog.html
+++ b/pages/blog.html
@@ -18,13 +18,16 @@
     <li><h2><a href="portfolio.html">Portfolio</a></h2></li>
   </ul>
 </nav>
-
+<section>
+	<a class="embedly-card" href="http://commonstarling.tumblr.com/">CodeWriter</a>
+<script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+</section>
 <footer class="content-footer">
   <p>Say "hi" to me on these social networks:</p>
   <ul class="social">
     <li><a href="https://github.com/commonstarling" target="_blank"><i class="fa fa-github-square"></i>Github</a></li>
     <li><a href="https://plus.google.com/u/1/112466428083972984003/posts" target="_blank"><i class="fa fa-google-plus-square"></i>Google+</a></li>
-    <li><a href="https://www.linkedin.com/in/sheenaramirez" target="_blank">LinkedIn</a></li>
+    <li><a href="https://www.linkedin.com/in/sheenaramirez" target="_blank"><i class="fa fa-linkedin-square"></i>LinkedIn</a></li>
   </ul>
   <p>Cover image via <a href="https://unsplash.com/">Unsplash</a></p>
 </footer>
