--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </header>
 <nav>
   <ul class="pages">
-    <li><h2><a href="../index.html">About Me</a></h2></li>
+    <li><h2><a href="../aboutme.html">About Me</a></h2></li>
     <li><h2><a href="pages/portfolio.html">Portfolio</a></h2></li>
   </ul>
 </nav>
@@ -40,7 +40,7 @@
     <li><a href="https://plus.google.com/u/1/112466428083972984003/posts" target="_blank"><i class="fa fa-google-plus-square"></i> Google+</a></li>
     <li><a href="http://commonstarling.tumblr.com/" target="_blank"><i class="fa fa-tumblr-square"></i> Tumblr</a></li>
   </ul>
-  <p>Cover image via <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
+  <p>Cover image via <a href="https://unsplash.com/">Unsplash</a></p>
 </footer>
 </body>
 </html>
