--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -14,37 +14,35 @@
 </header>
 <nav>
   <ul class="pages">
-    <li><h2><a href="../aboutme.html">About Me</a></h2></li>
-    <li><h2><a href="blog.html">Blog</a></h2></li>
+    <li><h2><a href="../index.html">About Me</a></h2></li>
+    <li><h2><a href="pages/portfolio.html">Portfolio</a></h2></li>
   </ul>
 </nav>
 <section class="portfolio">
 	<h1>Projects</h1>
-	<br>
-	<br>
-	<h3>"Hack" the New York Times</h3>
+	<h2>"Hack" the New York Times</h2>
 	<p>Using Chrome DevTools, I created a personalized edition of the New York Times homepage.</p>
 	<br>
-	<img class="portfolio-pics" src="../images/NYT-hack.jpg">
+	<a href="../images/NYT-hack.jpg" target="_blank"><img class="portfolio-pics" src="../images/NYT-hack.jpg"></a>
 	<br>
 	<br>
-	<h3>Karma Homepage Clone</h3>
+	<h2>Karma Homepage Clone</h2>
 	<p>This is a replica of the <a href="http://thinkful-ed.github.io/karma-clone/" target="_blank">previous homepage for Karma</a>, a provider of portable WiFi.</p>
 	<br>
-	<img class="portfolio-pics" src="../images/Karma-clone.jpg">
+	<a href="../startup-landing-page-clone/index.html" target="_blank"><img class="portfolio-pics" src="../images/Karma-clone.jpg"></a>
 	<br>
-	<img class="portfolio-pics" src="../images/karma-clone2.jpg">
+	<a href="../startup-landing-page-clone/index.html" target="_blank"><img class="portfolio-pics" src="../images/karma-clone2.jpg"></a>
+	<br>
 	<br>
 </section>
-
 <footer class="content-footer">
   <p>Say "hi" to me on these social networks:</p>
   <ul class="social">
-    <li><a href="https://github.com/commonstarling" target="_blank"><i class="fa fa-github-square"></i>Github</a></li>
-    <li><a href="https://plus.google.com/u/1/112466428083972984003/posts" target="_blank"><i class="fa fa-google-plus-square"></i>Google+</a></li>
-    <li><a href="https://www.linkedin.com/in/sheenaramirez" target="_blank"><i class="fa fa-linkedin-square"></i>LinkedIn</a></li>
+    <li><a href="https://github.com/commonstarling" target="_blank"><i class="fa fa-github-square"></i> Github</a></li>
+    <li><a href="https://plus.google.com/u/1/112466428083972984003/posts" target="_blank"><i class="fa fa-google-plus-square"></i> Google+</a></li>
+    <li><a href="http://commonstarling.tumblr.com/" target="_blank"><i class="fa fa-tumblr-square"></i> Tumblr</a></li>
   </ul>
-  <p>Cover image via <a href="https://unsplash.com/">Unsplash</a></p>
+  <p>Cover image via <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
 </footer>
 </body>
 </html>
