--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </header>
 <nav>
   <ul class="pages">
-    <li><h2><a href="../aboutme.html">About Me</a></h2></li>
+    <li><h2><a href="index.html">About Me</a></h2></li>
     <li><h2><a href="pages/portfolio.html">Portfolio</a></h2></li>
   </ul>
 </nav>
