--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -29,9 +29,9 @@
 	<h2>Karma Homepage Clone</h2>
 	<p>This is a replica of the <a href="http://thinkful-ed.github.io/karma-clone/" target="_blank">previous homepage for Karma</a>, a provider of portable WiFi.</p>
 	<br>
-	<a href="../startup-landing-page-clone/index.html" target="_blank"><img class="portfolio-pics" src="../images/Karma-clone.jpg"></a>
+	<a href="http://commonstarling.github.io/karma-clone/" target="_blank"><img class="portfolio-pics" src="../images/Karma-clone.jpg"></a>
 	<br>
-	<a href="../startup-landing-page-clone/index.html" target="_blank"><img class="portfolio-pics" src="../images/karma-clone2.jpg"></a>
+	<a href="http://commonstarling.github.io/karma-clone/" target="_blank"><img class="portfolio-pics" src="../images/karma-clone2.jpg"></a>
 	<br>
 	<br>
 </section>
