--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -20,12 +20,6 @@
 </nav>
 <section class="portfolio">
 	<h1>Projects</h1>
-	<h2>"Hack" the New York Times</h2>
-	<p>Using Chrome DevTools, I created a personalized edition of the New York Times homepage.</p>
-	<br>
-	<a href="../images/NYT-hack.jpg" target="_blank"><img class="portfolio-pics" src="../images/NYT-hack.jpg"></a>
-	<br>
-	<br>
 	<h2>Karma Homepage Clone</h2>
 	<p>This is a replica of the <a href="http://thinkful-ed.github.io/karma-clone/" target="_blank">previous homepage for Karma</a>, a provider of portable WiFi.</p>
 	<br>
@@ -33,7 +27,25 @@
 	<br>
 	<a href="http://commonstarling.github.io/karma-clone/" target="_blank"><img class="portfolio-pics" src="../images/karma-clone2.jpg"></a>
 	<br>
-	<br>S
+	<br>
+  <h2>StreetFighter jQuery Exercise</h2>
+  <p>This exercise uses one of my favorite video games of all time to illustrate my experience with using jQuery.</p>
+  <br>
+  <a href="http://commonstarling.github.io/jquery-streetfighter/" target="_blank"><img class="portfolio-pics" src="../images/Jquery_Streetfighter.jpg"></a>
+  <br>
+  <br>
+  <h2>Shopping List</h2>
+  <p>Use my shopping list app to decide what you need to buy, check off items you've purchased and delete items you don't need anymore.</p>
+  <br>
+  <a href="http://commonstarling.github.io/shopping-list-app/" target="_blank"><img class="portfolio-pics" src="../images/ShoppingList.jpg"></a>
+  <br>
+  <br>
+  <h2>Hot or Cold</h2>
+  <p>I coded all of the JavaScript in this game, in which you'll have to guess the secret number.</p>
+  <br>
+  <a href="http://commonstarling.github.io/hot-or-cold/" target="_blank"><img class="portfolio-pics" src="../images/HotOrCold.jpg"></a>
+  <br>
+  <br>
 </section>
 <footer class="content-footer">
   <p>Say "hi" to me on these social networks:</p>
