--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -37,7 +37,7 @@
   <h2>Shopping List</h2>
   <p>Use my shopping list app to decide what you need to buy, check off items you've purchased and delete items you don't need anymore.</p>
   <br>
-  <a href="http://commonstarling.github.io/shopping-list-app/" target="_blank"><img class="portfolio-pics" src="../images/ShoppingList.jpg"></a>
+  <a href="http://commonstarling.github.io/shopping-list/" target="_blank"><img class="portfolio-pics" src="../images/ShoppingList.jpg"></a>
   <br>
   <br>
   <h2>Hot or Cold</h2>
