--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -20,14 +20,14 @@
 </nav>
 <section class="portfolio">
 	<h1>Projects</h1>
-	<h2>Karma Homepage Clone</h2>
+	<!--<h2>Karma Homepage Clone</h2>
 	<p>This is a replica of the <a href="http://thinkful-ed.github.io/karma-clone/" target="_blank">previous homepage for Karma</a>, a provider of portable WiFi.</p>
 	<br>
 	<a href="http://commonstarling.github.io/karma-clone/" target="_blank"><img class="portfolio-pics" src="../images/karma-clone.jpg"></a>
 	<br>
 	<a href="http://commonstarling.github.io/karma-clone/" target="_blank"><img class="portfolio-pics" src="../images/karma-clone2.jpg"></a>
 	<br>
-	<br>
+	<br>-->
   <h2>StreetFighter jQuery Exercise</h2>
   <p>This exercise uses one of my favorite video games of all time to illustrate my experience with using jQuery.</p>
   <br>
@@ -40,10 +40,16 @@
   <a href="http://commonstarling.github.io/shopping-list/" target="_blank"><img class="portfolio-pics" src="../images/ShoppingList.jpg"></a>
   <br>
   <br>
-  <h2>Hot or Cold</h2>
-  <p>I coded all of the JavaScript in this game, in which you'll have to guess the secret number.</p>
+  <h2>Zeta Sigma Chi Quiz</h2>
+  <p>This quiz, coded in JavaScript, tests members of Zeta Sigma Chi Multicultural Sorority Inc. about the organization's history.</p>
   <br>
-  <a href="http://commonstarling.github.io/hot-or-cold/" target="_blank"><img class="portfolio-pics" src="../images/HotOrCold.jpg"></a>
+  <a href="http://commonstarling.github.io/quiz-app/" target="_blank"><img class="portfolio-pics" src="../images/zchiquiz.jpg"></a>
+  <br>
+  <br>
+  <h2>CheapEats</h2>
+  <p>With the help of FourSquare's API and some JavaScript, you can find out what the best cheap restaurants are in your area.</p>
+  <br>
+  <a href="http://commonstarling.github.io/hot-or-cold/" target="_blank"><img class="portfolio-pics" src="../images/cheapeats.jpg"></a>
   <br>
   <br>
 </section>
