--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -49,7 +49,7 @@
   <h2>CheapEats</h2>
   <p>With the help of FourSquare's API and some JavaScript, you can find out what the best cheap restaurants are in your area.</p>
   <br>
-  <a href="http://commonstarling.github.io/hot-or-cold/" target="_blank"><img class="portfolio-pics" src="../images/cheapeats.jpg"></a>
+  <a href="http://commonstarling.github.io/cheapeats/" target="_blank"><img class="portfolio-pics" src="../images/cheapeats.jpg"></a>
   <br>
   <br>
 </section>
